--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 		/>
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_page-5591772a.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-3221c26f.js">
+		<link rel="modulepreload" href="./_app/immutable/start-e5e52112.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-e3c720ce.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-2a585f3b.js">
 		<link rel="modulepreload" href="./_app/immutable/components/layout.svelte-1a808475.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-c18a9ed5.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-975b8af4.js">
 	</head>
 	<style>
 		* {
@@ -32,7 +32,7 @@
 
 <main class="svelte-ue0p13"><section class="intro svelte-pmvouc"><header class="about svelte-pmvouc"><h1 class="name svelte-pmvouc">jtriley.eth</h1>
 		<h2 class="title svelte-pmvouc">Smart Contract Engineer</h2></header>
-	<img alt="AI Generateed PFP" src="/_app/immutable/assets/jtriley-0bcdc1c6.png" class="pfp svelte-pmvouc">
+	<img alt="AI Generated PFP" src="/_app/immutable/assets/jtriley-0bcdc1c6.png" class="pfp svelte-pmvouc">
 </section>
 	<section class="contributions"><header class="info-header svelte-ue0p13"><h2 class="info-h2 svelte-ue0p13">Writing</h2></header>
 		<div class="info-container svelte-ue0p13"><div class="card svelte-gdpqox"><h3 class="title svelte-gdpqox">The Ether Deck</h3>
@@ -149,14 +149,14 @@
 </main>
 
 
-		<script type="module" data-sveltekit-hydrate="oo06z5">
-			import { start } from "./_app/immutable/start-3221c26f.js";
+		<script type="module" data-sveltekit-hydrate="1jdgowk">
+			import { start } from "./_app/immutable/start-e5e52112.js";
 
 			start({
 				assets: "",
 				env: {},
-				target: document.querySelector('[data-sveltekit-hydrate="oo06z5"]').parentNode,
-				version: "1690497885664",
+				target: document.querySelector('[data-sveltekit-hydrate="1jdgowk"]').parentNode,
+				version: "1690499595139",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
