try another hack

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 			rel="stylesheet"
 		/>
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_page-5591772a.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-e5e52112.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-e3c720ce.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-2a585f3b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/layout.svelte-1a808475.js">
-		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-9cbb603b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-975b8af4.js">
+		<link href="./app/immutable/assets/_page-5591772a.css" rel="stylesheet">
+		<link rel="modulepreload" href="./app/immutable/start-a592c566.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/index-e3c720ce.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/singletons-33eac6a1.js">
+		<link rel="modulepreload" href="./app/immutable/components/layout.svelte-1a808475.js">
+		<link rel="modulepreload" href="./app/immutable/modules/pages/_layout.js-9cbb603b.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/_layout-da46b06b.js">
+		<link rel="modulepreload" href="./app/immutable/components/pages/_page.svelte-b7b5b5f0.js">
 	</head>
 	<style>
 		* {
@@ -32,14 +32,14 @@
 
 <main class="svelte-ue0p13"><section class="intro svelte-pmvouc"><header class="about svelte-pmvouc"><h1 class="name svelte-pmvouc">jtriley.eth</h1>
 		<h2 class="title svelte-pmvouc">Smart Contract Engineer</h2></header>
-	<img alt="AI Generated PFP" src="/_app/immutable/assets/jtriley-0bcdc1c6.png" class="pfp svelte-pmvouc">
+	<img alt="AI Generated PFP" src="/app/immutable/assets/jtriley-0bcdc1c6.png" class="pfp svelte-pmvouc">
 </section>
 	<section class="contributions"><header class="info-header svelte-ue0p13"><h2 class="info-h2 svelte-ue0p13">Writing</h2></header>
 		<div class="info-container svelte-ue0p13"><div class="card svelte-gdpqox"><h3 class="title svelte-gdpqox">The Ether Deck</h3>
 	<p class="text svelte-gdpqox">A cutting edge smart contract wallet for power users.</p>
 	
 	
-	<a href="https://open.substack.com/pub/jtriley/p/the-ether-deck?r=1qyfrf&amp;utm_campaign=post&amp;utm_medium=web" class="pill svelte-naf950"><img alt="Substack Logo" src="/_app/immutable/assets/substack-27a4c37d.png" width="24" height="24" class=" svelte-naf950">
+	<a href="https://open.substack.com/pub/jtriley/p/the-ether-deck?r=1qyfrf&amp;utm_campaign=post&amp;utm_medium=web" class="pill svelte-naf950"><img alt="Substack Logo" src="/app/immutable/assets/substack-27a4c37d.png" width="24" height="24" class=" svelte-naf950">
 
 	<p class="text svelte-naf950">Article</p>
 </a>
@@ -47,7 +47,7 @@
 	<p class="text svelte-gdpqox">The state of the art.</p>
 	
 	
-	<a href="https://open.substack.com/pub/jtriley/p/ethereum-virtual-machine-language?r=1qyfrf&amp;utm_campaign=post&amp;utm_medium=web" class="pill svelte-naf950"><img alt="Substack Logo" src="/_app/immutable/assets/substack-27a4c37d.png" width="24" height="24" class=" svelte-naf950">
+	<a href="https://open.substack.com/pub/jtriley/p/ethereum-virtual-machine-language?r=1qyfrf&amp;utm_campaign=post&amp;utm_medium=web" class="pill svelte-naf950"><img alt="Substack Logo" src="/app/immutable/assets/substack-27a4c37d.png" width="24" height="24" class=" svelte-naf950">
 
 	<p class="text svelte-naf950">Article</p>
 </a>
@@ -55,7 +55,7 @@
 	<p class="text svelte-gdpqox">Beyond Domain Specific Languages.</p>
 	
 	
-	<a href="https://open.substack.com/pub/jtriley/p/constructing-zk-snark-circuits?r=1qyfrf&amp;utm_campaign=post&amp;utm_medium=web" class="pill svelte-naf950"><img alt="Substack Logo" src="/_app/immutable/assets/substack-27a4c37d.png" width="24" height="24" class=" svelte-naf950">
+	<a href="https://open.substack.com/pub/jtriley/p/constructing-zk-snark-circuits?r=1qyfrf&amp;utm_campaign=post&amp;utm_medium=web" class="pill svelte-naf950"><img alt="Substack Logo" src="/app/immutable/assets/substack-27a4c37d.png" width="24" height="24" class=" svelte-naf950">
 
 	<p class="text svelte-naf950">Article</p>
 </a>
@@ -65,7 +65,7 @@
 	<p class="text svelte-gdpqox">A multi-token contract interface as a simplified alternative to the ERC-1155 Multi-Token Standard</p>
 	
 	
-	<a href="https://eips.ethereum.org/EIPS/eip-6909" class="pill svelte-naf950"><img alt="Substack Logo" src="/_app/immutable/assets/substack-27a4c37d.png" width="24" height="24" class=" svelte-naf950">
+	<a href="https://eips.ethereum.org/EIPS/eip-6909" class="pill svelte-naf950"><img alt="Substack Logo" src="/app/immutable/assets/substack-27a4c37d.png" width="24" height="24" class=" svelte-naf950">
 
 	<p class="text svelte-naf950">Article</p>
 </a>
@@ -139,24 +139,24 @@
 	<footer class="footer svelte-1u3av4w"><section><h2>Links</h2>
 		<a href="https://github.com/jtriley-eth" class="container svelte-1u3av4w"><svg class="logo svelte-1u3av4w" width="24" height="24" fill="#f0f0f0" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"></path></svg>
 			<p class="link svelte-1u3av4w">GitHub</p></a>
-		<a href="https://t.me/jtriley" class="container svelte-1u3av4w"><img class="logo svelte-1u3av4w" alt="Telegram Logo" src="/_app/immutable/assets/telegram-f91e9d7c.png">
+		<a href="https://t.me/jtriley" class="container svelte-1u3av4w"><img class="logo svelte-1u3av4w" alt="Telegram Logo" src="/app/immutable/assets/telegram-f91e9d7c.png">
 			<p class="link svelte-1u3av4w">Telegram</p></a>
-		<a href="https://discord.gg/hT7wkwn6vf" class="container svelte-1u3av4w"><img class="logo svelte-1u3av4w" alt="Discord Logo" src="/_app/immutable/assets/discord-b2939df5.png">
+		<a href="https://discord.gg/hT7wkwn6vf" class="container svelte-1u3av4w"><img class="logo svelte-1u3av4w" alt="Discord Logo" src="/app/immutable/assets/discord-b2939df5.png">
 			<p class="link svelte-1u3av4w">Discord</p></a>
-		<a href="https://jtriley.substack.com/" class="container svelte-1u3av4w"><img class="logo svelte-1u3av4w" alt="Substack Logo" src="/_app/immutable/assets/substack-27a4c37d.png">
+		<a href="https://jtriley.substack.com/" class="container svelte-1u3av4w"><img class="logo svelte-1u3av4w" alt="Substack Logo" src="/app/immutable/assets/substack-27a4c37d.png">
 			<p class="link svelte-1u3av4w">Substack</p></a></section>
 </footer>
 </main>
 
 
-		<script type="module" data-sveltekit-hydrate="1jdgowk">
-			import { start } from "./_app/immutable/start-e5e52112.js";
+		<script type="module" data-sveltekit-hydrate="4gsx84">
+			import { start } from "./app/immutable/start-a592c566.js";
 
 			start({
 				assets: "",
 				env: {},
-				target: document.querySelector('[data-sveltekit-hydrate="1jdgowk"]').parentNode,
-				version: "1690499595139",
+				target: document.querySelector('[data-sveltekit-hydrate="4gsx84"]').parentNode,
+				version: "1690500244799",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
