add vy deep dive

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 		/>
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./app/immutable/assets/_page-5591772a.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/start-54ae4dcc.js">
+		<link rel="modulepreload" href="./app/immutable/start-da6092fc.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-e3c720ce.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/singletons-33eac6a1.js">
 		<link rel="modulepreload" href="./app/immutable/components/layout.svelte-1a808475.js">
 		<link rel="modulepreload" href="./app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./app/immutable/components/pages/_page.svelte-3421bc72.js">
+		<link rel="modulepreload" href="./app/immutable/components/pages/_page.svelte-6090c37f.js">
 	</head>
 	<style>
 		* {
@@ -35,7 +35,15 @@
 	<img alt="AI Generated PFP" src="/app/immutable/assets/jtriley-0bcdc1c6.png" class="pfp svelte-pmvouc">
 </section>
 	<section class="contributions"><header class="info-header svelte-ue0p13"><h2 class="info-h2 svelte-ue0p13">Writing</h2></header>
-		<div class="info-container svelte-ue0p13"><div class="card svelte-gdpqox"><h3 class="title svelte-gdpqox">The Ether Deck</h3>
+		<div class="info-container svelte-ue0p13"><div class="card svelte-gdpqox"><h3 class="title svelte-gdpqox">The Vyper Compiler</h3>
+	<p class="text svelte-gdpqox">A deep dive into the language and compiler internals.</p>
+	
+	
+	<a href="https://open.substack.com/pub/jtriley/p/the-vyper-compiler?r=1qyfrf&amp;utm_campaign=post&amp;utm_medium=web" class="pill svelte-naf950"><img alt="Substack Logo" src="/app/immutable/assets/substack-27a4c37d.png" width="24" height="24" class=" svelte-naf950">
+
+	<p class="text svelte-naf950">Article</p>
+</a>
+</div><div class="card svelte-gdpqox"><h3 class="title svelte-gdpqox">The Ether Deck</h3>
 	<p class="text svelte-gdpqox">A cutting edge smart contract wallet for power users.</p>
 	
 	
@@ -149,14 +157,14 @@
 </main>
 
 
-		<script type="module" data-sveltekit-hydrate="owfpmj">
-			import { start } from "./app/immutable/start-54ae4dcc.js";
+		<script type="module" data-sveltekit-hydrate="od8pz7">
+			import { start } from "./app/immutable/start-da6092fc.js";
 
 			start({
 				assets: "",
 				env: {},
-				target: document.querySelector('[data-sveltekit-hydrate="owfpmj"]').parentNode,
-				version: "1690500918888",
+				target: document.querySelector('[data-sveltekit-hydrate="od8pz7"]').parentNode,
+				version: "1691253722208",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
