--- a/print.html
+++ b/print.html
@@ -315,6 +315,9 @@ higher level ZK-SNARK domain specific languages behave under the hood.</p>
 <p><a href="https://open.substack.com/pub/jtriley/p/the-fuel-virtual-machine-architecture?r=1qyfrf&amp;utm_campaign=post&amp;utm_medium=web">The Fuel VM Architecture</a>
 is a deep dive into the Fuel VM architecture and how it differs from the Ethereum VM.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="type-theory-for-people-with-shit-to-do"><a class="header" href="#type-theory-for-people-with-shit-to-do">Type Theory For People With Shit To Do</a></h1>
+<p><em>jtriley.eth; 17 May, 2023</em></p>
+<hr />
+<p><a href="https://open.substack.com/pub/jtriley/p/type-theory?r=1qyfrf&amp;utm_campaign=post&amp;utm_medium=web">Substack Link</a></p>
 <h2 id="introduction-1"><a class="header" href="#introduction-1">Introduction</a></h2>
 <p>Type theory is defined as the formal presentation of type systems. It is a complex topic composed of
 relatively simple primitives, but its relationship to category theory and its implementations
